TEST_PROGRAMS/INVALID/08/multipleAssign.go
package main;
var x,y int;
func main(){
    x = y = 5;
}
